<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteText"
    android:orientation="vertical"
    android:weightSum="2"
    tools:context=".ui.sign.in.SignInFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="224dp"
        android:layout_height="64dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/eater"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/blackText"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/auth_picture"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_weight="1"
        android:gravity="center|bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="40dp"
            android:src="@drawable/ic_login" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom|center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/auth_picture">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/eater"
            android:paddingStart="40dp"
            android:text="@string/authorization"
            android:textColor="@color/blackText"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="40dp"
            android:paddingTop="10dp"
            android:paddingRight="40dp"
            android:paddingBottom="10dp">

            <EditText
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/edit_text"
                android:enabled="false"
                android:fontFamily="@font/eater"
                android:paddingStart="10dp"
                android:text="@string/begin_number"
                android:textColor="@color/blackText" />

            <EditText
                android:id="@+id/panel_auth_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text"
                android:fontFamily="@font/eater"
                android:inputType="phone"
                android:maxLength="10"
                android:paddingStart="10dp"
                android:textColor="@color/blackText" />
        </LinearLayout>

        <Button
            android:id="@+id/panel_auth_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:background="@drawable/bg_button_rounded"
            android:fontFamily="@font/eater"
            android:text="@string/btn_sign_in"
            android:textColor="@color/whiteText" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>