<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.profile.ProfileFragment">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include">

        <TextView
            android:id="@+id/textView"
            android:layout_width="224dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/eater"
            android:gravity="center"
            android:text="@string/profile_title"
            android:textColor="@color/blackText"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="136dp"
            android:layout_height="136dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
            app:srcCompat="@mipmap/ic_launcher"
            tools:ignore="MissingClass" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/btn_profile_book"
        style="@style/RoundedCornerButton"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_button_rounded"
        android:elevation="6dp"
        android:fontFamily="@font/eater"
        android:stateListAnimator="@null"
        android:text="@string/profile_my_book_rest"
        android:textColor="@color/whiteText"
        android:translationZ="6dp"
        app:layout_constraintEnd_toEndOf="@+id/include"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout1" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_profile_book">


        <ImageView
            android:id="@+id/img_profile_name"
            android:layout_width="36dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_baseline_person_red_24"
            app:layout_constraintEnd_toStartOf="@+id/txv_profile_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txv_profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:fontFamily="@font/eater"
            android:textColor="@color/blackText"
            app:layout_constraintBottom_toBottomOf="@+id/img_profile_name"
            app:layout_constraintStart_toEndOf="@id/img_profile_name"
            app:layout_constraintTop_toTopOf="@+id/img_profile_name" />

        <EditText
            android:id="@+id/edtx_profile_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:fontFamily="@font/eater"
            android:textColor="@color/blackText"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/img_profile_name"
            app:layout_constraintStart_toEndOf="@id/img_profile_name"
            app:layout_constraintTop_toTopOf="@+id/img_profile_name" />


        <ImageView
            android:id="@+id/img_profile_number"
            android:layout_width="36dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_profile_phone"
            app:layout_constraintEnd_toStartOf="@+id/txv_profile_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_profile_name" />

        <TextView
            android:id="@+id/txv_profile_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:fontFamily="@font/eater"
            android:textColor="@color/blackText"
            app:layout_constraintBottom_toBottomOf="@+id/img_profile_number"
            app:layout_constraintStart_toEndOf="@id/img_profile_number"
            app:layout_constraintTop_toTopOf="@+id/img_profile_number" />

        <EditText
            android:id="@+id/edtx_profile_number"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:fontFamily="@font/eater"
            android:textColor="@color/blackText"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/img_profile_number"
            app:layout_constraintStart_toEndOf="@id/img_profile_number"
            app:layout_constraintTop_toTopOf="@+id/img_profile_number" />

        <ImageView
            android:id="@+id/img_profile_city"
            android:layout_width="36dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_profile_location_city"
            app:layout_constraintEnd_toStartOf="@+id/txv_profile_city"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_profile_number" />

        <TextView
            android:id="@+id/txv_profile_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:fontFamily="@font/eater"
            android:textColor="@color/blackText"
            app:layout_constraintBottom_toBottomOf="@+id/img_profile_city"
            app:layout_constraintStart_toEndOf="@id/img_profile_city"
            app:layout_constraintTop_toTopOf="@+id/img_profile_city" />

        <EditText
            android:id="@+id/edtx_profile_city"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:fontFamily="@font/eater"
            android:textColor="@color/blackText"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/img_profile_city"
            app:layout_constraintStart_toEndOf="@id/img_profile_city"
            app:layout_constraintTop_toTopOf="@+id/img_profile_city" />

        <Button
            android:id="@+id/btn_profile_sign_out"
            style="@style/RoundedCornerButton"
            android:layout_width="240dp"
            android:layout_height="48dp"
            android:layout_marginTop="44dp"
            android:background="@drawable/bg_button_rounded"
            android:elevation="6dp"
            android:fontFamily="@font/eater"
            android:stateListAnimator="@null"
            android:text="@string/profile_logout"
            android:textColor="@color/whiteText"
            android:translationZ="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtx_profile_city" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>